feat: add npm access to libs

--- a/libs/eslint-config/package.json
+++ b/libs/eslint-config/package.json
@@ -3,6 +3,9 @@
   "version": "0.4.0",
   "type": "module",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@eslint/js": "^9.11.1",
     "typescript-eslint": "^8.7.0",
