--- a/libs/http/package.json
+++ b/libs/http/package.json
@@ -3,6 +3,9 @@
   "version": "0.4.0",
   "type": "module",
   "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^18.2.0",
     "@angular/core": "^18.2.0",
