--- a/libs/prettier-config/package.json
+++ b/libs/prettier-config/package.json
@@ -3,6 +3,9 @@
   "version": "0.4.0",
   "type": "module",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@prettier/plugin-xml": "*",
     "prettier": "*",
