--- a/libs/eslint-config/package.json
+++ b/libs/eslint-config/package.json
@@ -6,6 +6,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/al-mart/safe-angular"
+  },
   "dependencies": {
     "@eslint/js": "^9.11.1",
     "typescript-eslint": "^8.7.0",
