--- a/libs/eslint-config/package.json
+++ b/libs/eslint-config/package.json
@@ -11,23 +11,24 @@
     "url": "https://github.com/al-mart/safe-angular"
   },
   "dependencies": {
-    "@eslint/js": "^9.11.1",
-    "typescript-eslint": "^8.7.0",
-    "angular-eslint": "^18.3.1",
-    "globals": "15.9.0",
-    "eslint-plugin-sonarjs": "^2.0.2",
-    "eslint-plugin-deprecation": "3.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
-    "eslint-plugin-promise": "^7.1.0",
+    "@eslint/js": "^9.24.0",
+    "typescript-eslint": "^8.29.1",
+    "angular-eslint": "^19.3.0",
+    "globals": "^16.0.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unicorn": "^55.0.0",
-    "@cspell/eslint-plugin": "^8.14.4",
-    "eslint-plugin-jest": "^28.8.3",
-    "@stylistic/eslint-plugin-js": "^2.8.0",
-    "@stylistic/eslint-plugin-ts": "^2.8.0",
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "3.1.0",
-    "eslint-plugin-rxjs-angular": "^2.0.1"
+    "eslint-plugin-unicorn": "^58.0.0",
+    "@cspell/eslint-plugin": "^8.18.1",
+    "eslint-plugin-jest": "^28.11.0",
+    "@stylistic/eslint-plugin-js": "^4.2.0",
+    "@stylistic/eslint-plugin-ts": "^4.2.0",
+    "@eslint/compat": "^1.2.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "eslint-plugin-rxjs-angular": "^2.0.1",
+    "eslint-plugin-rxjs": "^5.0.3"
   }
 }
