--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-angular",
-  "packageManager": "yarn@4.5.0",
+  "packageManager": "yarn@4.9.1",
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
@@ -12,92 +12,92 @@
     "test:test": "nx test http --skipNxCache"
   },
   "dependencies": {
-    "@angular-devkit/build-angular": "^18.2.0",
-    "@angular-devkit/core": "^18.2.0",
-    "@angular-devkit/schematics": "^18.2.0",
-    "@angular/animations": "^18.2.0",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/compiler-cli": "^18.2.5",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "@cspell/eslint-plugin": "^8.14.4",
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "^9.11.1",
+    "@angular-devkit/build-angular": "^19.2.7",
+    "@angular-devkit/core": "^19.2.7",
+    "@angular-devkit/schematics": "^19.2.7",
+    "@angular/animations": "^19.2.6",
+    "@angular/common": "^19.2.6",
+    "@angular/compiler": "^19.2.6",
+    "@angular/compiler-cli": "^19.2.6",
+    "@angular/core": "^19.2.6",
+    "@angular/forms": "^19.2.6",
+    "@angular/platform-browser": "^19.2.6",
+    "@angular/platform-browser-dynamic": "^19.2.6",
+    "@angular/router": "^19.2.6",
+    "@cspell/eslint-plugin": "^8.18.1",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+    "@eslint/compat": "^1.2.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
     "@prettier/plugin-xml": "^3.4.1",
-    "@stylistic/eslint-plugin-js": "^2.8.0",
-    "@stylistic/eslint-plugin-plus": "^2.8.0",
-    "@stylistic/eslint-plugin-ts": "^2.8.0",
-    "angular-eslint": "^18.3.1",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-deprecation": "3.0.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.1.0",
+    "@stylistic/eslint-plugin-js": "^4.2.0",
+    "@stylistic/eslint-plugin-plus": "^4.2.0",
+    "@stylistic/eslint-plugin-ts": "^4.2.0",
+    "angular-eslint": "^19.3.0",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-playwright": "^2.2.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-rxjs": "^5.0.3",
     "eslint-plugin-rxjs-angular": "^2.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sonarjs": "^2.0.2",
-    "eslint-plugin-unicorn": "^55.0.0",
-    "globals": "15.9.0",
-    "husky": "^9.1.6",
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "eslint-plugin-unicorn": "^58.0.0",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jsonc-eslint-parser": "^2.4.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "prettier-package-json": "^2.8.0",
     "prettier-plugin-organize-attributes": "^1.0.0",
-    "rxjs": "^7.8.1",
-    "sort-package-json": "^2.10.1",
-    "typescript-eslint": "^8.7.0",
+    "rxjs": "^7.8.2",
+    "sort-package-json": "^3.0.0",
+    "typescript-eslint": "^8.29.1",
     "utility-types": "^3.11.0",
-    "uuid": "^10.0.0",
+    "uuid": "^11.1.0",
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular/cli": "^18.2.0",
-    "@angular/compiler-cli": "^18.2.0",
-    "@jscutlery/semver": "^5.3.1",
-    "@nx/angular": "20.0.0",
-    "@nx/devkit": "20.0.0",
-    "@nx/eslint": "20.0.0",
-    "@nx/eslint-plugin": "20.0.0",
-    "@nx/jest": "20.0.0",
-    "@nx/js": "20.0.0",
-    "@nx/playwright": "20.0.0",
-    "@nx/web": "20.0.0",
-    "@nx/workspace": "20.0.0",
-    "@playwright/test": "^1.36.0",
-    "@schematics/angular": "^18.2.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
+    "@angular/cli": "^19.2.7",
+    "@angular/compiler-cli": "^19.2.6",
+    "@jscutlery/semver": "^5.6.0",
+    "@nx/angular": "20.7.2",
+    "@nx/devkit": "20.7.2",
+    "@nx/eslint": "20.7.2",
+    "@nx/eslint-plugin": "20.7.2",
+    "@nx/jest": "20.7.2",
+    "@nx/js": "20.7.2",
+    "@nx/playwright": "20.7.2",
+    "@nx/web": "20.7.2",
+    "@nx/workspace": "20.7.2",
+    "@playwright/test": "^1.51.1",
+    "@schematics/angular": "^19.2.7",
+    "@swc-node/register": "^1.10.10",
+    "@swc/core": "^1.11.20",
+    "@swc/helpers": "^0.5.17",
+    "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "18.16.9",
+    "@types/node": "^22.14.1",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/utils": "^8.0.0",
-    "autoprefixer": "^10.4.0",
-    "cpy-cli": "5.0.0",
-    "http-request-mock": "^2.0.1",
+    "@typescript-eslint/utils": "^8.29.1",
+    "autoprefixer": "^10.4.21",
+    "cpy-cli": "^5.0.0",
+    "http-request-mock": "^2.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.1.0",
-    "jsonc-eslint-parser": "^2.1.0",
-    "lodash-es": "^4.17.12",
-    "make-dir-cli": "4.0.0",
-    "ng-packagr": "^18.2.0",
-    "nx": "20.0.0",
-    "postcss": "^8.4.5",
-    "postcss-url": "~10.1.3",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.2",
-    "tslib": "^2.7.0",
-    "typescript": "~5.5.2"
+    "jest-preset-angular": "^14.5.4",
+    "jsonc-eslint-parser": "^2.4.0",
+    "lodash-es": "^4.17.21",
+    "make-dir-cli": "^4.0.0",
+    "ng-packagr": "^19.2.2",
+    "nx": "20.7.2",
+    "postcss": "^8.5.3",
+    "postcss-url": "^10.1.3",
+    "ts-jest": "^29.3.1",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3"
   }
 }
