--- a/libs/eslint-config/package.json
+++ b/libs/eslint-config/package.json
@@ -29,6 +29,7 @@
     "@eslint/compat": "^1.2.8",
     "@eslint/eslintrc": "^3.3.1",
     "eslint-plugin-rxjs-angular": "^2.0.1",
-    "eslint-plugin-rxjs": "^5.0.3"
+    "eslint-plugin-rxjs": "^5.0.3",
+    "eslint": "^9.24.0"
   }
 }
